--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
-# Files in the config/locales directory are used for internationalization and
+# Files sign_in the config/locales directory are used for internationalization and
 # are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
+# English, add the necessary files sign_in this directory.
 #
 # To use the locales, use `I18n.t`:
 #
@@ -14,7 +14,7 @@
 #
 #     I18n.locale = :es
 #
-# This would use the information in config/locales/es.yml.
+# This would use the information sign_in config/locales/es.yml.
 #
 # To learn more about the API, please read the Rails Internationalization guide
 # at https://guides.rubyonrails.org/i18n.html.
